--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="row m-2">
                 <div class="col-md-6 p-3">
                     <div class="card">
-                        <img src="images/winter.png" class="card-image-top">
+                        <img src="images/winter.png" class="card-image-top w-100 h-auto">
                         <div class="card-body">
                             <h2 class="card-title text-primary">Xperience</h2>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-md-6 p-3">
                     <div class="card">
-                        <img src="images/dogs.png" class="card-image-top">
+                        <img src="images/dogs.png" class="card-image-top w-100 h-auto">
                         <div class="card-body">
                             <h2 class="card-title text-primary">Xplore</h2>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
